Add missing component group reference

--- a/BackgroundService.NET.Setup/Product.wxs
+++ b/BackgroundService.NET.Setup/Product.wxs
@@ -19,6 +19,7 @@
 		<Feature Id="ProductFeature" Title="BackgroundService.NET.Setup" Level="1">
 			<ComponentRef Id="ProductComponent" />
 			<ComponentRef Id="AppsettingsComponent"/>
+			<ComponentGroupRef Id="HeatGenerated" />
 		</Feature>
 	</Product>
 
